[gd_scene load_steps=5 format=3 uid="uid://gwx8ruhivu8l"]

[ext_resource type="Script" path="res://LevelParts/UIScene.gd" id="1_lid86"]
[ext_resource type="Texture2D" uid="uid://cdswwe4ue3e7d" path="res://img/button1.tres" id="2_awsd6"]
[ext_resource type="Texture2D" uid="uid://d0om1spnntinv" path="res://img/button3.tres" id="2_xxisr"]
[ext_resource type="Texture2D" uid="uid://bq1ry2o01r1wf" path="res://img/button11.tres" id="3_ocr10"]

[node name="UiScene" type="Node2D"]
script = ExtResource("1_lid86")

[node name="Pause1" type="TextureButton" parent="."]
offset_left = 608.0
offset_top = 14.0
offset_right = 755.0
offset_bottom = 163.0
texture_normal = ExtResource("2_awsd6")
texture_pressed = ExtResource("3_ocr10")
ignore_texture_size = true
stretch_mode = 0

[node name="pauseButton" type="Button" parent="Pause1"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 145.0
offset_bottom = 147.0
theme_override_font_sizes/font_size = 24
text = "Pause"

[node name="pause" type="Panel" parent="."]
visible = false
offset_left = -7.0
offset_top = -7.0
offset_right = 772.0
offset_bottom = 1568.0

[node name="close2" type="Button" parent="pause"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.008
anchor_right = 1.0
anchor_bottom = 1.011
offset_left = -0.232
offset_top = -9.0
offset_right = 23.0
offset_bottom = 0.674927

[node name="Button5" type="Sprite2D" parent="pause"]
position = Vector2(394, 600.5)
scale = Vector2(3.9375, 4.29688)
texture = ExtResource("2_xxisr")

[node name="restart" type="Button" parent="pause"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.515
anchor_top = 0.5
anchor_right = 0.515
anchor_bottom = 0.5
offset_left = -253.185
offset_top = -319.0
offset_right = 237.815
offset_bottom = -55.0
theme_override_font_sizes/font_size = 28
text = "Restart"

[node name="Button3" type="Sprite2D" parent="pause"]
position = Vector2(393, 881.5)
scale = Vector2(3.9375, 4.29688)
texture = ExtResource("2_xxisr")

[node name="menu" type="Button" parent="pause"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.519
anchor_top = 0.5
anchor_right = 0.519
anchor_bottom = 0.5
offset_left = -258.301
offset_top = -39.0
offset_right = 233.699
offset_bottom = 225.0
theme_override_font_sizes/font_size = 28
text = "Menu"

[node name="Button4" type="Sprite2D" parent="pause"]
position = Vector2(394, 318.5)
scale = Vector2(3.9375, 4.29688)
texture = ExtResource("2_xxisr")

[node name="close" type="Button" parent="pause"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.51
anchor_top = 0.5
anchor_right = 0.51
anchor_bottom = 0.5
offset_left = -251.29
offset_top = -600.5
offset_right = 243.71
offset_bottom = -336.5
theme_override_font_sizes/font_size = 28
text = "Продолжить"

[node name="Label" type="Label" parent="pause"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.526
anchor_top = 0.5
anchor_right = 0.526
anchor_bottom = 0.5
offset_left = -167.754
offset_top = -713.5
offset_right = 159.246
offset_bottom = -625.5
theme_override_font_sizes/font_size = 64
text = "Pause"
horizontal_alignment = 1

[node name="win" type="Panel" parent="."]
visible = false
offset_left = -3.0
offset_top = 6.0
offset_right = 795.0
offset_bottom = 1572.0

[node name="Button5" type="Sprite2D" parent="win"]
position = Vector2(394, 600.5)
scale = Vector2(3.9375, 4.29688)
texture = ExtResource("2_xxisr")

[node name="Button3" type="Sprite2D" parent="win"]
position = Vector2(393, 881.5)
scale = Vector2(3.9375, 4.29688)
texture = ExtResource("2_xxisr")

[node name="Button4" type="Sprite2D" parent="win"]
position = Vector2(394, 318.5)
scale = Vector2(3.9375, 4.29688)
texture = ExtResource("2_xxisr")

[node name="PanelDontClick" type="Panel" parent="win"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_right = -19.0
offset_bottom = -3.0

[node name="next" type="Button" parent="win"]
layout_mode = 0
offset_left = 148.0
offset_top = 189.0
offset_right = 637.0
offset_bottom = 450.0
theme_override_font_sizes/font_size = 28
text = "Next level"

[node name="restart" type="Button" parent="win"]
layout_mode = 0
offset_left = 148.0
offset_top = 470.0
offset_right = 640.0
offset_bottom = 729.0
theme_override_font_sizes/font_size = 28
text = "Restart"

[node name="menu" type="Button" parent="win"]
layout_mode = 0
offset_left = 148.0
offset_top = 750.0
offset_right = 639.0
offset_bottom = 1013.0
theme_override_font_sizes/font_size = 28
text = "Menu"

[node name="Label" type="Label" parent="win"]
layout_mode = 0
offset_left = 236.0
offset_top = 58.0
offset_right = 563.0
offset_bottom = 146.0
theme_override_font_sizes/font_size = 64
text = "Winner"
horizontal_alignment = 1

[node name="loser" type="Panel" parent="."]
visible = false
offset_left = -3.0
offset_top = -2.0
offset_right = 767.0
offset_bottom = 1567.0

[node name="Button5" type="Sprite2D" parent="loser"]
position = Vector2(392, 420.5)
scale = Vector2(3.9375, 4.29688)
texture = ExtResource("2_xxisr")

[node name="Button3" type="Sprite2D" parent="loser"]
position = Vector2(391, 701.5)
scale = Vector2(3.9375, 4.29688)
texture = ExtResource("2_xxisr")

[node name="PanelDontClick" type="Panel" parent="loser"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.002
anchor_right = 0.998
anchor_bottom = 1.0
offset_left = 0.026
offset_top = -1.0
offset_right = -0.026001
offset_bottom = -1.0

[node name="restart" type="Button" parent="loser"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.527
anchor_top = 0.5
anchor_right = 0.527
anchor_bottom = 0.5
offset_left = -259.79
offset_top = -494.5
offset_right = 231.21
offset_bottom = -233.5
theme_override_font_sizes/font_size = 28
text = "Restart"

[node name="menu" type="Button" parent="loser"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.527
anchor_top = 0.5
anchor_right = 0.527
anchor_bottom = 0.5
offset_left = -258.79
offset_top = -212.5
offset_right = 231.21
offset_bottom = 44.5
theme_override_font_sizes/font_size = 28
text = "Menu"

[node name="Label" type="Label" parent="loser"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.537
anchor_top = 0.5
anchor_right = 0.537
anchor_bottom = 0.5
offset_left = -174.49
offset_top = -607.5
offset_right = 152.51
offset_bottom = -519.5
theme_override_font_sizes/font_size = 64
text = "Loser"
horizontal_alignment = 1

[connection signal="pressed" from="Pause1/pauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="pause/close2" to="." method="_on_close_2_pressed"]
[connection signal="pressed" from="pause/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="pause/menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="pause/close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="win/next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="win/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="win/menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="loser/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="loser/menu" to="." method="_on_menu_pressed"]
